# weval

./: .gitignore  Cargo.toml  README.md
.github/actions/binary-compatible-builds/: action.yml
.github/workflows/: ci.yml  release.yml
ci/: build-tarballs.sh
ci/docker/aarch64-linux/: Dockerfile
ci/docker/s390x-linux/: Dockerfile
doc/: DESIGN.md  TODO
include/: weval.h
lib/: weval-rt.c  weval-stubs.wat
npm/weval/: .gitignore  README.md  index.js  package-lock.json  package.json
src/: cache.rs  constant_offsets.rs  dce.rs  directive.rs  escape.rs  eval.rs  filter.rs  heap.rs  image.rs  intrinsics.rs  liveness.rs  main.rs  stackify.rs  state.rs  stats.rs  value.rs
tests/: .gitignore
tests/simple/: Makefile  simple.cpp
