[package]
name = "weval"
version = "0.1.0"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-Exception"
edition = "2021"

[dependencies]
waffle = { path = "../waffle", version = "*" }
anyhow = "1.0"
structopt = "0.3"
wasm-encoder = "0.20"
wasmparser = "0.95"
log = "0.4"
env_logger = "0.9"

[patch.crates-io]
gimli = { git = "https://github.com/philipc/gimli", branch = "line-tombstone" }
