[package]
name = "weval"
version = "0.1.0"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-Exception"
edition = "2021"

[dependencies]
waffle = "0.0.22"
anyhow = "1.0"
structopt = "0.3"
wasm-encoder = "0.20"
wasmparser = "0.95"
log = "0.4"
env_logger = "0.9"
fxhash = "0.2"
rayon = "1.5"
indicatif = "0.17"

[profile.release]
debug = true
