[package]
name = "weval"
description = "The WebAssembly partial evaluator"
repository = "https://github.com/cfallin/weval"
version = "0.1.0"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
exclude = ["/npm", "/ci"]

[dependencies]
#waffle = "0.0.33"
waffle = { path = "../waffle" }
anyhow = "1.0"
structopt = "0.3"
wasm-encoder = "0.202.0"
wasmparser = "0.202.0"
log = "0.4"
env_logger = "0.11"
fxhash = "0.2"
rayon = "1.8"
indicatif = "0.17"
wizer = "5.0"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }

